nrf: switch UART pinmux to 'foo-gpios'
Convert uses of the following properties to these equivalents:

    tx-pin  -> tx-gpios
    rx-pin  -> rx-gpios
    rts-pin -> rts-gpios
    cts-pin -> cts-gpios

Done with a script except for the /delete-property/ line in the
samples. Sample, board, and test changes are combined for bisectability.

Signed-off-by: Martí Bolívar <marti.bolivar@nordicsemi.no>

--- a/boards/arm/96b_carbon_nrf51/96b_carbon_nrf51.dts
+++ b/boards/arm/96b_carbon_nrf51/96b_carbon_nrf51.dts
@@ -37,8 +37,8 @@
 &uart0 {
 	current-speed = <115200>;
 	status = "okay";
-	tx-pin = <29>;
-	rx-pin = <11>;
+	tx-gpios = <&gpio0 29 0>;
+	rx-gpios = <&gpio0 11 0>;
 };
 
 &spi1 {
