--- a/boards/arm/96b_nitrogen/96b_nitrogen.dts
+++ b/boards/arm/96b_nitrogen/96b_nitrogen.dts
@@ -66,10 +66,10 @@
 	compatible = "nordic,nrf-uart";
 	current-speed = <115200>;
 	status = "okay";
-	tx-pin = <13>;
-	rx-pin = <15>;
-	rts-pin = <12>;
-	cts-pin = <14>;
+	tx-gpios = <&gpio0 13 0>;
+	rx-gpios = <&gpio0 15 0>;
+	rts-gpios = <&gpio0 12 0>;
+	cts-gpios = <&gpio0 14 0>;
 };
 
 &i2c0 {
