--- a/boards/arm/arduino_nano_33_ble/arduino_nano_33_ble.dts
+++ b/boards/arm/arduino_nano_33_ble/arduino_nano_33_ble.dts
@@ -63,8 +63,8 @@
 	compatible = "nordic,nrf-uart";
 	current-speed = <115200>;
 	status = "okay";
-	tx-pin = <35>; //P1.03
-	rx-pin = <42>; //P1.10
+	tx-gpios = <&gpio1 3 0>;
+	rx-gpios = <&gpio1 10 0>;
 };
 &i2c0 {
 	compatible = "nordic,nrf-twim";
