--- a/boards/arm/bbc_microbit/bbc_microbit.dts
+++ b/boards/arm/bbc_microbit/bbc_microbit.dts
@@ -53,8 +53,8 @@
 &uart0 {
 	status = "okay";
 	current-speed = <115200>;
-	tx-pin = <24>;
-	rx-pin = <25>;
+	tx-gpios = <&gpio0 24 0>;
+	rx-gpios = <&gpio0 25 0>;
 };
 
 &i2c0 {
