--- a/boards/arm/bt510/bt510.dts
+++ b/boards/arm/bt510/bt510.dts
@@ -103,8 +103,8 @@
 	compatible = "nordic,nrf-uart";
 	current-speed = <115200>;
 	status = "okay";
-	tx-pin = <6>;
-	rx-pin = <8>;
+	tx-gpios = <&gpio0 6 0>;
+	rx-gpios = <&gpio0 8 0>;
 };
 
 &i2c0 {
