--- a/boards/arm/circuitdojo_feather_nrf9160/circuitdojo_feather_nrf9160_common.dts
+++ b/boards/arm/circuitdojo_feather_nrf9160/circuitdojo_feather_nrf9160_common.dts
@@ -90,19 +90,19 @@
 &uart0 {
 	status = "okay";
 	current-speed = <115200>;
-	tx-pin = <6>;
-	rx-pin = <5>;
+	tx-gpios = <&gpio0 6 0>;
+	rx-gpios = <&gpio0 5 0>;
 };
 
 &uart1 {
 	current-speed = <115200>;
-	tx-pin = <0>;
-	rx-pin = <1>;
+	tx-gpios = <&gpio0 0 0>;
+	rx-gpios = <&gpio0 1 0>;
 };
 
 &uart2 {
-	tx-pin = <24>;
-	rx-pin = <23>;
+	tx-gpios = <&gpio0 24 0>;
+	rx-gpios = <&gpio0 23 0>;
 };
 
 &i2c1 {
