--- a/boards/arm/degu_evk/degu_evk.dts
+++ b/boards/arm/degu_evk/degu_evk.dts
@@ -85,10 +85,10 @@
 	compatible = "nordic,nrf-uart";
 	current-speed = <115200>;
 	status = "okay";
-	tx-pin = <25>;
-	rx-pin = <24>;
-	rts-pin = <23>;
-	cts-pin = <21>;
+	tx-gpios = <&gpio0 25 0>;
+	rx-gpios = <&gpio0 24 0>;
+	rts-gpios = <&gpio0 23 0>;
+	cts-gpios = <&gpio0 21 0>;
 };
 
 &i2c0 {
