--- a/boards/arm/nrf51_vbluno51/nrf51_vbluno51.dts
+++ b/boards/arm/nrf51_vbluno51/nrf51_vbluno51.dts
@@ -57,10 +57,10 @@
 &uart0 {
 	current-speed = <115200>;
 	status = "okay";
-	tx-pin = <10>;
-	rx-pin = <11>;
-	rts-pin = <12>;
-	cts-pin = <13>;
+	tx-gpios = <&gpio0 10 0>;
+	rx-gpios = <&gpio0 11 0>;
+	rts-gpios = <&gpio0 12 0>;
+	cts-gpios = <&gpio0 13 0>;
 };
 
 &i2c0 {
