--- a/boards/arm/nrf52840dk_nrf52840/nrf52840dk_nrf52840.dts
+++ b/boards/arm/nrf52840dk_nrf52840/nrf52840dk_nrf52840.dts
@@ -143,17 +143,17 @@
 	compatible = "nordic,nrf-uarte";
 	status = "okay";
 	current-speed = <115200>;
-	tx-pin = <6>;
-	rx-pin = <8>;
-	rts-pin = <5>;
-	cts-pin = <7>;
+	tx-gpios = <&gpio0 6 0>;
+	rx-gpios = <&gpio0 8 0>;
+	rts-gpios = <&gpio0 5 0>;
+	cts-gpios = <&gpio0 7 0>;
 };
 
 arduino_serial: &uart1 {
 	status = "okay";
 	current-speed = <115200>;
-	rx-pin = <33>;
-	tx-pin = <34>;
+	rx-gpios = <&gpio1 1 0>;
+	tx-gpios = <&gpio1 2 0>;
 };
 
 arduino_i2c: &i2c0 {
