--- a/boards/arm/nrf52_sparkfun/nrf52_sparkfun.dts
+++ b/boards/arm/nrf52_sparkfun/nrf52_sparkfun.dts
@@ -58,8 +58,8 @@
 	compatible = "nordic,nrf-uart";
 	current-speed = <115200>;
 	status = "okay";
-	tx-pin = <27>;
-	rx-pin = <26>;
+	tx-gpios = <&gpio0 27 0>;
+	rx-gpios = <&gpio0 26 0>;
 };
 
 &flash0 {
