--- a/boards/arm/nrf9160_innblue22/nrf9160_innblue22_common.dts
+++ b/boards/arm/nrf9160_innblue22/nrf9160_innblue22_common.dts
@@ -67,22 +67,22 @@
 &uart0 {
 	status = "okay";
 	current-speed = <115200>;
-	tx-pin = <29>;
-	rx-pin = <30>;
+	tx-gpios = <&gpio0 29 0>;
+	rx-gpios = <&gpio0 30 0>;
 
 };
 
 &uart1 {
 	status = "okay";
 	current-speed = <115200>;
-	tx-pin = <14>;
-	rx-pin = <15>;
+	tx-gpios = <&gpio0 14 0>;
+	rx-gpios = <&gpio0 15 0>;
 };
 
 &uart2 {
 	current-speed = <115200>;
-	tx-pin = <18>;
-	rx-pin = <19>;
+	tx-gpios = <&gpio0 18 0>;
+	rx-gpios = <&gpio0 19 0>;
 };
 
 
