--- a/boards/arm/particle_argon/particle_argon.dts
+++ b/boards/arm/particle_argon/particle_argon.dts
@@ -31,8 +31,8 @@
 	compatible = "nordic,nrf-uarte";
 	current-speed = <921600>;
 	status = "okay";
-	tx-pin = <37>;
-	rx-pin = <36>;
-	rts-pin = <39>;
-	cts-pin = <38>;
+	tx-gpios = <&gpio1 5 0>;
+	rx-gpios = <&gpio1 4 0>;
+	rts-gpios = <&gpio1 7 0>;
+	cts-gpios = <&gpio1 6 0>;
 };
