--- a/boards/arm/particle_boron/particle_boron.dts
+++ b/boards/arm/particle_boron/particle_boron.dts
@@ -36,10 +36,10 @@
 	current-speed = <115200>;
 	status = "okay";
 
-	tx-pin = <37>;
-	rx-pin = <36>;
-	rts-pin = <39>;
-	cts-pin = <38>;
+	tx-gpios = <&gpio1 5 0>;
+	rx-gpios = <&gpio1 4 0>;
+	rts-gpios = <&gpio1 7 0>;
+	cts-gpios = <&gpio1 6 0>;
 	hw-flow-control;
 
 	sara_r4 {
