--- a/boards/arm/particle_xenon/particle_xenon.dts
+++ b/boards/arm/particle_xenon/particle_xenon.dts
@@ -31,7 +31,7 @@
 	compatible = "nordic,nrf-uarte";
 	current-speed = <115200>;
 	status = "disabled";
-	tx-pin = <40>;
-	rx-pin = <42>;
+	tx-gpios = <&gpio1 8 0>;
+	rx-gpios = <&gpio1 10 0>;
 	/* optional mesh_feather_uart2_rtscts.dtsi */
 };
