--- a/boards/arm/pinetime_devkit0/pinetime_devkit0.dts
+++ b/boards/arm/pinetime_devkit0/pinetime_devkit0.dts
@@ -79,8 +79,8 @@
 	compatible = "nordic,nrf-uart";
 	current-speed = <115200>;
 	status = "okay";
-	tx-pin = <11>;
-	rx-pin = <30>;
+	tx-gpios = <&gpio0 11 0>;
+	rx-gpios = <&gpio0 30 0>;
 };
 
 &i2c0 {
