--- a/boards/arm/pinnacle_100_dvk/pinnacle_100_dvk.dts
+++ b/boards/arm/pinnacle_100_dvk/pinnacle_100_dvk.dts
@@ -94,20 +94,20 @@
 	compatible = "nordic,nrf-uart";
 	status = "okay";
 	current-speed = <115200>;
-	tx-pin = <6>;
-	rx-pin = <8>;
-	rts-pin = <5>;
-	cts-pin = <7>;
+	tx-gpios = <&gpio0 6 0>;
+	rx-gpios = <&gpio0 8 0>;
+	rts-gpios = <&gpio0 5 0>;
+	cts-gpios = <&gpio0 7 0>;
 };
 
 &uart1 {
 	compatible = "nordic,nrf-uarte";
 	status = "okay";
 	current-speed = <115200>;
-	tx-pin = <14>;
-	rx-pin = <16>;
-	rts-pin = <13>;
-	cts-pin = <15>;
+	tx-gpios = <&gpio0 14 0>;
+	rx-gpios = <&gpio0 16 0>;
+	rts-gpios = <&gpio0 13 0>;
+	cts-gpios = <&gpio0 15 0>;
 	hl7800 {
 		compatible = "swir,hl7800";
 		status = "okay";
