--- a/boards/arm/rak5010_nrf52840/rak5010_nrf52840.dts
+++ b/boards/arm/rak5010_nrf52840/rak5010_nrf52840.dts
@@ -56,10 +56,10 @@
 	compatible = "nordic,nrf-uart";
 	status = "okay";
 	current-speed = <115200>;
-	tx-pin = <6>;
-	rx-pin = <8>;
-	rts-pin = <7>;
-	cts-pin = <11>;
+	tx-gpios = <&gpio0 6 0>;
+	rx-gpios = <&gpio0 8 0>;
+	rts-gpios = <&gpio0 7 0>;
+	cts-gpios = <&gpio0 11 0>;
 
 	/* QUECTEL BG9X */
 	quectel_bg9x: quectel_bg9x {
@@ -77,8 +77,8 @@
 	compatible = "nordic,nrf-uart";
 	current-speed = <115200>;
 	status = "okay";
-	tx-pin = <33>;
-	rx-pin = <34>;
+	tx-gpios = <&gpio1 1 0>;
+	rx-gpios = <&gpio1 2 0>;
 };
 
 &i2c1 {
