--- a/boards/arm/reel_board/dts/reel_board.dtsi
+++ b/boards/arm/reel_board/dts/reel_board.dtsi
@@ -102,15 +102,15 @@
 	compatible = "nordic,nrf-uart";
 	current-speed = <115200>;
 	status = "okay";
-	tx-pin = <6>;
-	rx-pin = <8>;
+	tx-gpios = <&gpio0 6 0>;
+	rx-gpios = <&gpio0 8 0>;
 };
 
 arduino_serial: &uart1 {
 	status = "okay";
 	current-speed = <115200>;
-	rx-pin = <33>;
-	tx-pin = <34>;
+	rx-gpios = <&gpio1 1 0>;
+	tx-gpios = <&gpio1 2 0>;
 };
 
 arduino_i2c: &i2c0 {
