--- a/boards/arm/ruuvi_ruuvitag/ruuvi_ruuvitag.dts
+++ b/boards/arm/ruuvi_ruuvitag/ruuvi_ruuvitag.dts
@@ -66,10 +66,10 @@
 	status = "okay";
 	compatible = "nordic,nrf-uart";
 	current-speed = <115200>;
-	tx-pin = <5>;
-	rx-pin = <4>;
-	cts-pin = <31>;
-	rts-pin = <30>;
+	tx-gpios = <&gpio0 5 0>;
+	rx-gpios = <&gpio0 4 0>;
+	cts-gpios = <&gpio0 31 0>;
+	rts-gpios = <&gpio0 30 0>;
 };
 
 &spi0 {
