scripts: add retwist to help with bisecting twister failures
A test that fails with twister can be isolated to a particular commit
using twister.  In some cases the test can be intermittent, requiring
it be run multiple times to gain confidence that the problem is not
present at a particular commit.

retwist provides a script that takes the same arguments as twister but
does all the steps necessary to check for failures after switching to
a specific commit in bisect:

* make sure west is up to date
* build the test and run it the first time
* if it passes, repeat until the desired confidence has been reached
* if it fails, capture the twister artifacts in a directory named
  according to the failed commit
* log all tested branches in retwist.log

Signed-off-by: Peter Bigot <peter.bigot@nordicsemi.no>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -514,6 +514,7 @@
 /scripts/get_maintainer.py                @nashif
 /scripts/dts/                             @mbolivar-nordic @galak
 /scripts/release/                         @nashif
+/scripts/retwist                         @pabigot
 /scripts/ci/                              @nashif
 /arch/x86/gen_gdt.py                      @dcpleung @nashif
 /arch/x86/gen_idt.py                      @dcpleung @nashif
