--- a/tests/bluetooth/bsim_bt/edtt_ble_test_app/hci_test_app/prj_legacy.conf
+++ b/tests/bluetooth/bsim_bt/edtt_ble_test_app/hci_test_app/prj_legacy.conf
@@ -22,11 +22,11 @@ CONFIG_BT_CTLR_DTM_HCI=y
 CONFIG_BT_CTLR_TX_BUFFER_SIZE=60
 CONFIG_BT_CTLR_DATA_LENGTH_MAX=60
 
-CONFIG_PM=y
+CONFIG_SYS_POWER_MANAGEMENT=y
 CONFIG_TICKLESS_IDLE=y
 CONFIG_TICKLESS_KERNEL=y
 
 
-# Disabling BT_LL_SW_SPLIT_LLCP_LEGACY requires BT_CTLR_ADVANCED_FEATURES
+# Enabling BT_LL_SW_SPLIT_LLCP_LEGACY requires BT_CTLR_ADVANCED_FEATURES
 CONFIG_BT_CTLR_ADVANCED_FEATURES=y
-CONFIG_BT_LL_SW_SPLIT_LLCP_LEGACY=n
+CONFIG_BT_LL_SW_SPLIT_LLCP_LEGACY=y
