--- a/boards/arm/stm32f103_mini/support/openocd.cfg
+++ b/boards/arm/stm32f103_mini/support/openocd.cfg
@@ -1,18 +1,18 @@
-source [find interface/stlink.cfg]
-
-transport select hla_swd
+source [find interface/cmsis-dap.cfg]
+# stlink.cfg
+transport select swd
 
 source [find target/stm32f1x.cfg]
 
-reset_config srst_only
+# reset_config srst_only
 
-$_TARGETNAME configure -event gdb-attach {
-        echo "Debugger attaching: halting execution"
-        reset halt
-        gdb_breakpoint_override hard
-}
+# $_TARGETNAME configure -event gdb-attach {
+#         echo "Debugger attaching: halting execution"
+#         reset halt
+#         gdb_breakpoint_override hard
+# }
 
-$_TARGETNAME configure -event gdb-detach {
-        echo "Debugger detaching: resuming execution"
-        resume
-}
+# $_TARGETNAME configure -event gdb-detach {
+#         echo "Debugger detaching: resuming execution"
+#         resume
+# }
