--- a/boards/arm/nrf52840dk_nrf52840/nrf52840dk_nrf52840.dts
+++ b/boards/arm/nrf52840dk_nrf52840/nrf52840dk_nrf52840.dts
@@ -247,18 +247,22 @@ arduino_spi: &spi3 {
 		#size-cells = <1>;
 
 		boot_partition: partition@0 {
+			compatible = "zephyr,mcuboot,image";
 			label = "mcuboot";
 			reg = <0x000000000 0x0000C000>;
 		};
 		slot0_partition: partition@c000 {
+			compatible = "zephyr,application-image";
 			label = "image-0";
 			reg = <0x0000C000 0x00067000>;
 		};
 		slot1_partition: partition@73000 {
+			compatible = "zephyr,application-image";
 			label = "image-1";
 			reg = <0x00073000 0x00067000>;
 		};
 		scratch_partition: partition@da000 {
+			compatible = "zephyr,mcuboot-scratch";
 			label = "image-scratch";
 			reg = <0x000da000 0x0001e000>;
 		};
