--- a/west.yml
+++ b/west.yml
@@ -91,8 +91,9 @@ manifest:
       revision: 24d84ecff195fb15c889d9046e44e4804d626c67
       path: modules/crypto/mbedtls
     - name: mcuboot
-      revision: 846b104e67c46f9428fd020ba8dccf94f786d94d
+      revision: pull/960/head
       path: bootloader/mcuboot
+      url: https://github.com/mcu-tools/mcuboot/
     - name: mcumgr
       revision: 9f09bae7c0ad7df5e0a72731061125913fba61c7
       path: modules/lib/mcumgr
