--- a/boards/arm/stm32f103_mini/stm32f103_mini.dts
+++ b/boards/arm/stm32f103_mini/stm32f103_mini.dts
@@ -22,13 +22,14 @@
 	leds {
 		compatible = "gpio-leds";
 		green_led_1: led_1 {
-			gpios = <&gpioc 13 GPIO_ACTIVE_LOW>;
+			gpios = <&gpioa 8 GPIO_ACTIVE_LOW>;
 			label = "User LD1";
 		};
 	};
 
 	aliases {
 		led0 = &green_led_1;
+		lcd0 = &lcd_st7735;
 	};
 };
 
@@ -58,6 +59,19 @@
 	pinctrl-0 = <&spi1_nss_master_pa4 &spi1_sck_master_pa5
 		     &spi1_miso_master_pa6 &spi1_mosi_master_pa7>;
 	status = "okay";
+
+	cs-gpios = <&gpioa 4 GPIO_ACTIVE_LOW>;
+	lcd_st7735:st7735@0{
+			compatible = "sitronix,st7735";
+			reg=<0>;
+			spi-max-frequency = <5000000>; /* 8MHz */
+			label = "ST7735";
+			cmd-data-gpios = <&gpioc 4 GPIO_ACTIVE_HIGH>;
+			reset-gpios = <&gpiob 12 GPIO_ACTIVE_LOW>;
+			blk-gpios = <&gpioa 1 GPIO_ACTIVE_LOW>;
+			width = <129>;
+			height = <160>;
+	};
 };
 
 &spi2 {
