--- a/lib/os/CMakeLists.txt
+++ b/lib/os/CMakeLists.txt
@@ -19,7 +19,6 @@ zephyr_sources(
   rb.c
   sem.c
   thread_entry.c
-  timeutil.c
   heap.c
   heap-validate.c
   )
@@ -30,6 +29,8 @@ zephyr_sources_ifdef(CONFIG_CBPRINTF_NANO cbprintf_nano.c)
 zephyr_sources_ifdef(CONFIG_JSON_LIBRARY json.c)
 
 zephyr_sources_ifdef(CONFIG_RING_BUFFER ring_buffer.c)
+
+zephyr_sources_ifndef(CONFIG_FORBID_FP timeutil.c)
 
 zephyr_sources_ifdef(CONFIG_ASSERT assert.c)
 
