--- a/boards/arm/stm32f103_mini/stm32f103_mini.dts
+++ b/boards/arm/stm32f103_mini/stm32f103_mini.dts
@@ -86,9 +86,9 @@
 	lcd_st7735:st7735@0{
 			compatible = "sitronix,st7735";
 			reg=<0>;
-			spi-max-frequency = <5000000>; /* 8MHz */
+			spi-max-frequency = <8000000>; /* 8MHz */
 			label = "ST7735";
-			reset-gpios = <&gpiob 12 GPIO_ACTIVE_LOW>;
+			reset-gpios = <&gpiob 12 GPIO_ACTIVE_HIGH>;
 			cmd-data-gpios = <&gpioc 4 GPIO_ACTIVE_HIGH>;
 			width = <129>;
 			height = <160>;
