--- a/drivers/timer/Kconfig
+++ b/drivers/timer/Kconfig
@@ -99,6 +99,7 @@ config CORTEX_M_SYSTICK
 	default $(dt_compat_enabled,$(DT_COMPAT_ARM_V6M_SYSTICK)) || \
 		$(dt_compat_enabled,$(DT_COMPAT_ARM_V7M_SYSTICK)) || \
 		$(dt_compat_enabled,$(DT_COMPAT_ARM_V8M_SYSTICK))
+	depends on !STM32_LPTIM_TIMER
 	select TICKLESS_CAPABLE
 	help
 	  This module implements a kernel device driver for the Cortex-M processor
