doc: add support for Sphinx dummy builder
Dummy builder writes no files. It is useful e.g. in a CI environment
where the actual documentation output is not relevant. The documentation
is still built, so errors or warnings are detected.

Signed-off-by: Gerard Marull-Paretas <gerard.marull@nordicsemi.no>

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -64,6 +64,11 @@ else()
   separate_arguments(SPHINXOPTS)
 endif()
 
+option(DUMMY_BUILD "Use Sphinx dummy builder" OFF)
+if(DUMMY_BUILD)
+  list(APPEND SPHINXOPTS -b dummy)
+endif()
+
 if(NOT DEFINED SPHINX_OUTPUT_DIR)
   set(SPHINX_OUTPUT_DIR_HTML ${CMAKE_CURRENT_BINARY_DIR}/html)
   set(SPHINX_OUTPUT_DIR_LATEX ${CMAKE_CURRENT_BINARY_DIR}/latex)
