--- a/.github/workflows/doc-build.yml
+++ b/.github/workflows/doc-build.yml
@@ -56,7 +56,7 @@ jobs:
     - name: build-docs
       run: |
         source zephyr-env.sh
-        make htmldocs
+        DUMMY_BUILD=ON make htmldocs
         tar cvf htmldocs.tar --directory=./doc/_build html
 
     - name: upload-build
