--- a/boards/posix/nrf52_bsim/nrf52_bsim.yaml
+++ b/boards/posix/nrf52_bsim/nrf52_bsim.yaml
@@ -2,10 +2,12 @@ identifier: nrf52_bsim
 name: NRF52 BabbleSim board
 type: native
 arch: posix
+simulation: bsim
 env:
   - BSIM_OUT_PATH
 toolchain:
   - zephyr
 testing:
-  ignore_tags:
-    - drivers
+  default: true
+  only_tags:
+    - bluetooth
